--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
-  <link href="/css/landing-page.css" rel="stylesheet" />
-  <link href="/css/main.css" rel="stylesheet" />
+  <link href="./css/landing-page.css" rel="stylesheet" />
+  <link href="./css/main.css" rel="stylesheet" />
 
   <style>
 
@@ -35,26 +35,26 @@
         </button>
       </div>
       <div>
-        <img class="store-front" src="/images/logo.webp" width="100%" height="320px" alt="store front" />
+        <img class="store-front" src="./images/logo.webp" width="100%" height="320px" alt="store front" />
       </div>
     </div>
 
     {{! Features }}
     <div class="features">
       <div class="feature justify-center align-center">
-        <img src="/images/feature1.svg" width="50px" height="50px" alt="business feature 1" class="feature-image" />
+        <img src="./images/feature1.svg" width="50px" height="50px" alt="business feature 1" class="feature-image" />
         <div class="feature-title">
           feature1
         </div>
       </div>
       <div class="feature justify-center align-center">
-        <img src="/images/feature2.svg" width="50px" height="50px" alt="business feature 2" class="feature-image" />
+        <img src="./images/feature2.svg" width="50px" height="50px" alt="business feature 2" class="feature-image" />
         <div class="feature-title">
           feature1
         </div>
       </div>
       <div class="feature justify-center align-center">
-        <img src="/images/feature3.svg" width="50px" height="50px" alt="business feature 3" class="feature-image" />
+        <img src="./images/feature3.svg" width="50px" height="50px" alt="business feature 3" class="feature-image" />
         <div class="feature-title">
           feature1
         </div>
@@ -105,10 +105,10 @@
 
         <p style="display: flex;">
           Made with
-          <img width="25px" height="20px" src="/images/heart.svg" alt="love" style="margin: 0 6px;" />
+          <img width="25px" height="20px" src="./images/heart.svg" alt="love" style="margin: 0 6px;" />
           by
         </p>
-        <img src="/images/cashwise.svg" class="footer-logo" alt="Cashwise" width="200px" height="50px" />
+        <img src="./images/cashwise.svg" class="footer-logo" alt="Cashwise" width="200px" height="50px" />
       </div>
       <div></div>
 
