--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link href="./css/main.css" rel="stylesheet" />
 
   <style>
-
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
   </style>
 
 </head>
