--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="business-landing-header space-between">
 
-    <div class="business-landing-header-title">{{title}}</div>
+    <div class="business-landing-header-title">title</div>
     <button class="button" style="background-color: #25D366; color: white">
       Send Whatsapp
     </button>
@@ -30,7 +30,7 @@
   </div>
   <div class="main">
 
-    {{! Tagline & Logo }}
+    <!-- Tagline & Logo   -->
     <div class="space-between content">
       <div class="content-left">
         <p>BUSINESS tagline Line2</p>
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    {{! Features }}
+    <!-- ! Features  -->
     <div class="features">
       <div class="feature justify-center align-center">
         <img src="./images/feature1.svg" width="50px" height="50px" alt="business feature 1" class="feature-image" />
@@ -66,7 +66,7 @@
 
     </div>
 
-    {{! Testimonial Section }}
+    <!-- ! Testimonial Section  -->
     <div class="testimonial justify-center align-center">
 
       <p>
@@ -76,7 +76,7 @@
       </p>
     </div>
 
-    {{! Contact Section }}
+    <!-- ! Contact Section  -->
     <div class="contact-us">
       <h1>Contact Us</h1>
       <div class="space-between">
@@ -95,14 +95,14 @@
       </div>
     </div>
 
-    {{!-- Map --}}
+    <!-- !-- Map -- -->
     <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.880547964576!2d77.5936983148229!3d12.971599990868403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae167b0c0b0e5d%3A0x7b3b6a3b6b6b6b6b!2sCashwise%20Technologies!5e0!3m2!1sen!2sin!4v1623169128809!5m2!1sen!2sin"
         width="100%" height="100%" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
-    {{! Footer }}
+    <!-- ! Footer  -->
     <div class="footer space-between align-center">
 
       <div class="footer-left">
