--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title></title>
+  <title>Urban Libaaz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
   <link href="./css/landing-page.css" rel="stylesheet" />
@@ -22,7 +22,7 @@
 
   <div class="business-landing-header space-between">
 
-    <div class="business-landing-header-title">title</div>
+    <div class="business-landing-header-title">Urban Libaaz</div>
     <button class="button" style="background-color: #25D366; color: white">
       Send Whatsapp
     </button>
@@ -33,7 +33,8 @@
     <!-- Tagline & Logo   -->
     <div class="space-between content">
       <div class="content-left">
-        <p>BUSINESS tagline Line2</p>
+        <p>Ethnics To Feel The Love Classic Western Glam
+          Desire For Jewellery</p>
         <button class="button" style="background-color: #25D366; color: white">
           Send Whatsapp
         </button>
@@ -48,19 +49,19 @@
       <div class="feature justify-center align-center">
         <img src="./images/feature1.svg" width="50px" height="50px" alt="business feature 1" class="feature-image" />
         <div class="feature-title">
-          feature1
+          Fashion To Inspire
         </div>
       </div>
       <div class="feature justify-center align-center">
         <img src="./images/feature2.svg" width="50px" height="50px" alt="business feature 2" class="feature-image" />
         <div class="feature-title">
-          feature1
+          It's Time to catch the Trend
         </div>
       </div>
       <div class="feature justify-center align-center">
         <img src="./images/feature3.svg" width="50px" height="50px" alt="business feature 3" class="feature-image" />
         <div class="feature-title">
-          feature1
+          Accessories To Fall In Love
         </div>
       </div>
 
@@ -82,10 +83,10 @@
       <div class="space-between">
         <div class="contact-left">
           <h1>Address</h1>
-          <p>Address Line 1</p>
-          <p>Address Line 2</p>
-          <p>City</p>
-          <p>State</p>
+          <p>Sr.No. 116, Chikhali Moshi Road, Jadhav Wadi, </p>
+          <p> Pimpri-Chinchwad</p>
+          <p>Pune</p>
+          <p>Maharashtra</p>
         </div>
         <div class="contact-right">
           <h1>Contact</h1>
