--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <div class="business-landing-header space-between">
 
-    <div class="business-landing-header-title">Urban Libaaz</div>
-    <button class="button" style="background-color: #25D366; color: white">
+    <p class="business-landing-header-title">Urban Libaaz</p>
+    <button class="button whatsapp-button" style="background-color: #25D366; color: white">
       Send Whatsapp
     </button>
 
@@ -35,7 +35,7 @@
       <div class="content-left">
         <p>Ethnics To Feel The Love Classic Western Glam
           Desire For Jewellery</p>
-        <button class="button" style="background-color: #25D366; color: white">
+        <button class="button whatsapp-button">
           Send Whatsapp
         </button>
       </div>
