--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p class="business-landing-header-title">Urban Libaaz</p>
     <button class="button whatsapp-button" style="background-color: #25D366; color: white">
       Send Whatsapp
+      <img src="./images/whatsapp.svg" alt="W" width="25px" height="25px" style="margin-left: 1rem;">
     </button>
 
   </div>
@@ -35,11 +36,12 @@
       <div class="content-left">
         <p>Ethnics To Feel The Love Classic Western Glam
           Desire For Jewellery</p>
-        <button class="button whatsapp-button">
+        <button class="button whatsapp-button" style="background-color: #25D366; color: white">
           Send Whatsapp
+          <img src="./images/whatsapp.svg" alt="W" width="25px" height="25px" style="margin-left: 1rem;">
         </button>
       </div>
-      <div>
+      <div class="content-right">
         <img class="store-front" src="./images/logo.webp" width="100%" height="320px" alt="store front" />
       </div>
     </div>
