--- a/index.html
+++ b/index.html
@@ -106,19 +106,21 @@
     </div>
 
     <!-- Footer  -->
-    <div class="footer space-between align-center">
+  </div>
+  <div class="footer space-between align-center">
 
-      <div class="footer-left">
+    <div class="footer-left">
 
-        <p style="display: flex;">
-          Made with
-          <img width="25px" height="20px" src="./images/heart.svg" alt="love" style="margin: 0 6px;" />
-          by
-        </p>
-        <img src="./images/cashwise.svg" class="footer-logo" alt="Cashwise" width="200px" height="50px" />
-      </div>
-      <div></div>
-
+      <p style="display: flex;">
+        Made with
+        <img width="25px" height="20px" src="./images/heart.svg" alt="love" style="margin: 0 6px;" />
+        in India by
+      </p>
+      <img src="./images/cashwise.svg" class="footer-logo" alt="Cashwise" width="200px" height="50px" />
+    </div>
+    <div class="footer-right">
+      <p>Cashwise is a Free GST filing app</p>
+      <img src="./images/play-store.webp" class="footer-logo" alt="Cashwise" width="124px" height="41px" />
     </div>
   </div>
 
